--- a/sample-czzd.conf
+++ b/sample-czzd.conf
@@ -329,6 +329,16 @@
 ; by the blackmaxsize option and will be limited as needed.
 ; blockprioritysize=50000
 
+; dogecoin
+; dogecoinrpc = 127.0.0.1:9999
+; dogecoinrpcuser = root
+; dogecoinrpcpass = admin
+
+; litecoin
+; ltccoinrpc = 127.0.0.1:9998
+; ltccoinrpcuser = root
+; ltccoinrpcpass = admin
+
 
 ; ------------------------------------------------------------------------------
 ; Debug
