--- a/sample-czzd.conf
+++ b/sample-czzd.conf
@@ -21,6 +21,12 @@
 ; Use testnet.
 ; testnet=1
 
+; Use regtest.
+; regtest=1
+
+; Use simnet.
+; simnet=1
+
 ; Connect via a SOCKS5 proxy.  NOTE: Specifying a proxy will disable listening
 ; for incoming connections unless listen addresses are provided via the 'listen'
 ; option.
